; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/carthw/svp/extr_compiler.c_tr_A_to_r0.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/carthw/svp/extr_compiler.c_tr_A_to_r0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hostreg_r = common dso_local global i32* null, align 8
@SSP_A = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @tr_A_to_r0 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tr_A_to_r0(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32*, i32** @hostreg_r, align 8
  %4 = getelementptr inbounds i32, i32* %3, i64 0
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @SSP_A, align 4
  %7 = shl i32 %6, 16
  %8 = icmp ne i32 %5, %7
  br i1 %8, label %9, label %15

9:                                                ; preds = %1
  %10 = call i32 @EOP_MOV_REG_LSR(i32 0, i32 5, i32 16)
  %11 = load i32, i32* @SSP_A, align 4
  %12 = shl i32 %11, 16
  %13 = load i32*, i32** @hostreg_r, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 0
  store i32 %12, i32* %14, align 4
  br label %15

15:                                               ; preds = %9, %1
  ret void
}

declare dso_local i32 @EOP_MOV_REG_LSR(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
